Fixed z-index order

--- a/components/layout/header/nav/nav.module.scss
+++ b/components/layout/header/nav/nav.module.scss
@@ -11,7 +11,7 @@
   right: 0;
   width: 200px;
   box-shadow: var(--box-shadow);
-  z-index: 19;
+  z-index: 50;
   transition: all .2s;
 
   a {
