--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -42,6 +42,7 @@ body {
       border-radius: 1rem;
       margin: 4rem auto;
       position: relative;
+      z-index: 1;
 
       h1 {
         margin: 0 0 1rem 0;
